Issue #820: remove nowrap rule for dataset table. The table become unusable when dataset contains logn lines; make table wider by default

--- a/trunk/js/zetaprints/zp-dataset.css
+++ b/trunk/js/zetaprints/zp-dataset.css
@@ -8,8 +8,7 @@
 
 .zp-dataset-table {
   border-collapse: collapse;
-  width: 100%;
-  white-space: nowrap;
+  width: 200%;
 }
 
 .zp-dataset-table thead {
